--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "moment": "^2.29.2",
-    "react": "^18.0.0",
+    "react": "17.0.2",
     "react-calendar": "^3.7.0",
     "react-clock": "^3.1.0",
-    "react-dom": "^18.0.0",
+    "react-dom": "17.0.2",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "redux": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
