--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "react-calendar": "^3.7.0",
     "react-clock": "^3.1.0",
     "react-dom": "17.0.2",
-    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "redux": "^4.2.0"
+    "recoil": "^0.7.3-alpha.2"
   },
   "scripts": {
     "start": "react-scripts start",
