--- a/.github/workflows/frontdeploy.yml
+++ b/.github/workflows/frontdeploy.yml
@@ -23,7 +23,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           script: |
-            cd Team4-Frontend
+            cd master
             git reset --hard
             git fetch
             git pull
